test/src/e2e_vm_tests/test_programs/should_fail/imports_implicitly_public/external_mod/src/external_submod.sw
library;

pub fn external_submod_foo() -> u32 {
    2
}
